[package]
name = "adrenaline"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "adrenaline"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
miette = { version = "7.0", features = ["fancy"] }
anyhow = "1.0"
thiserror = "1.0"
rustpython-parser = "0.4"
rustpython-ast = "0.4"
hashbrown = "0.14"
parking_lot = "0.12"
rayon = "1.7"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
rustyline = "13.0"
lazy_static = "1.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
